Responsive homepage banner, tentative fix for X overflow on mobile fix #201 fix #203 #211

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,7 +1,7 @@
 @import '~bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss';
 
 .ta-campaign-background {
-	margin-top: -1em;
+	margin-top: 73px;
 	background-color: #080808;
 	transition: height 1.0s;
 	overflow: hidden;
@@ -17,6 +17,8 @@
 
 @media (min-width: $screen-sm-min) {
 	.ta-campaign-background {
+		margin-top: -1em;
+
 		img {
 			transition: all 0.3s;
 		}
@@ -26,6 +28,7 @@
 			position: absolute;
 			width: 100%;
 			height: 100%;
+			padding-top: 120px;
 			align-items: center;
 			justify-content: center;
 			z-index: 10;
